--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,23 +3,9 @@ body {
     font-family: sans-serif;
 }
 
-.cal-entry {
-    width: 180px;
-    color: #555;
-    font-size: 0.8em;
-    background-color: #EEE;
-    margin: 10px 0;
-    padding: 5px;
-    box-shadow: 5px 5px 5px #888;
-    position: relative;
+.gridStyle {
+    border: 1px solid #999;
+    max-width: 500px;
+    height: 600px;
 }
-.cal-entry input {
-    width: 170px;
-}
-.cal-entry .delete {
-    color: red;
-    position: absolute;
-    font-weight: bolder;
-    right: 7px;
-    top: 3px;
-}
+
